# healthylabs

./: .gitignore  package-lock.json  package.json
healthylabs-data_pipeline/: .gitignore  main.py  test_api.py  (+2 more)
healthylabs-data_pipeline/Healthylabs_model/: RAG_model_approach  README.md  evaluation  guide  model  pipeline_summary  pyproject.toml
healthylabs-data_pipeline/Healthylabs_model/healthylabs_inference/: __init__.py  main.py  service.py
healthylabs-data_pipeline/Healthylabs_model/healthylabs_inference/api/: request_models.py  routes.py
healthylabs-data_pipeline/Healthylabs_model/healthylabs_inference/core/: config.py  database_clients.py  embeddings.py  llm_client.py
healthylabs-data_pipeline/Healthylabs_model/healthylabs_inference/orchestrator/: intent_guard.py  memory.py  prompts.py  reflection.py  self_rag_router.py
healthylabs-data_pipeline/Healthylabs_model/healthylabs_inference/retrieval/: kg_overrides.py  models.py  neo4j_search.py  reranker.py
healthylabs-data_pipeline/Healthylabs_model/healthylabs_inference/synthesis/: conflict_resolver.py  response_builder.py
healthylabs-data_pipeline/Healthylabs_model/tests/: test_compatibility_defaults.py  test_config_and_sql.py  test_conflict_resolver.py  test_decompose_async.py  test_intent_guard.py  test_intent_guard_llm.py  test_llm_client_retry.py  test_memory_manager.py  test_response_builder_evidence.py  test_response_builder_memory.py  test_response_builder_visual.py  test_retrieval_scoring.py  test_router_fallback.py  test_runtime_fallbacks.py  test_service_runtime.py  test_visual_retrieval.py
(+64 files in other folders)
