[project]
name = "healthylabs-inference"
version = "0.1.0"
description = "HealthyLabs medical RAG retrieval and synthesis layer."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "neo4j>=5.18",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "google-genai>=1.0",
  "sentence-transformers>=2.7",
  "minio>=7.2",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
